fix(footer): minor spacing fix on contact us

--- a/app/apps/common/styles/_footer.scss
+++ b/app/apps/common/styles/_footer.scss
@@ -24,7 +24,7 @@ footer {
       padding: 0;
       float:left;
       display: inline-block;
-      padding-right: 30px;
+      padding-right: 40px;
 
       li{
         background-color: none;
